--- a/maps-geolocation/index.html
+++ b/maps-geolocation/index.html
@@ -20,7 +20,7 @@
     <script src="styles.js"></script>
     <script src="app.js"></script>
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxRnLJg31O3CW392wq9udS4-5NKMhp8ws&callback=initMap"></script>
-</body>
+    src="https://maps.googleapis.com/maps/api/js?key=___your_key_here___&callback=initMap"></script>
+    </body>
 
 </html>
